# ClothingParser

./: .gitignore  README.md
ClothingClassifier/: CMakeLists.txt  main.cpp
ClothingClassifier/src/: CMakeLists.txt  NetworkManager.cpp  NetworkManager.hpp
DatasetCreator/: datasetJsonParser.py
FigureCreator/: figureCreator.py  imageMixer.py
OutdoorImageCreator/: CMakeLists.txt  ImageSplitter.py  main.cpp
SiameseDataCropper/: BoundingBox.cpp  BoundingBox.hpp  CMakeLists.txt  Image.cpp  Image.hpp  Pair.cpp  Pair.hpp  main.cpp
Street2ShopParser/: CMakeLists.txt  CMakeListsDeep.txt  main.cpp
WhereToBuyItEvaluation/: CMakeLists.txt  configFileExample.config  create_images_id.sh  main.cpp  product_photo_relation_script.sh
WhereToBuyItEvaluation/scripts/: measurements.py  obtain_classes.sh  retrieval_testing_id.sh
WhereToBuyItEvaluation/src/: CMakeLists.txt  DescriptorManager.cpp  DescriptorManager.hpp  ExperimentConfigurator.cpp  ExperimentConfigurator.hpp  ExperimentEvaluator.cpp  ExperimentEvaluator.hpp  MeasureCalculator.hpp  MeasureCalculatorRetrieval.cpp  MeasureCalculatorRetrieval.hpp  utils.cpp  utils.hpp
