file(GLOB_RECURSE SRC ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

pkg_search_module(CVISION REQUIRED cvision)
pkg_search_module(JMSR REQUIRED jmsr)

add_library(EXPERIMENT_RUNNER STATIC ${SRC})
target_link_libraries(EXPERIMENT_RUNNER ${CVISON_LIBRARIES} ${JMSR_LIBRARIES})
target_compile_options(EXPERIMENT_RUNNER PUBLIC ${CVISION_CFLAGS_OTHER} ${JMSR_CFLAGS_OTHER})

target_include_directories(EXPERIMENT_RUNNER PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CVISION_INCLUDE_DIRS} ${JMSR_INCLUDE_DIRS})
set_target_properties(EXPERIMENT_RUNNER PROPERTIES LINKER_LANGUAGE CXX)
